added more background